--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "antd": "^4.16.13",
+    "i18next": "^21.3.0",
+    "react": "^17.0.1",
+    "react-animated-number": "^0.4.4",
+    "react-dom": "^17.0.1",
+    "react-i18next": "^11.12.0",
+    "react-redux": "^7.2.5",
+    "react-scripts": "^3.4.4",
+    "react-virtualized": "^9.22.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
