--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xxrlzzz.github.io/react_toy/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
